--- a/style.css
+++ b/style.css
@@ -1,11 +1,41 @@
-body{
+html, body {
 	margin: 0;
 	padding: 0;
+	font-family: Arial, Helvetica, sans-serif;
+	text-align: center;
+  }
+
+#overlay {
+	position: absolute;
+	background: rgba(0,0,0,.5);
+	width: 100%;
+	height: 100%;
+	
+}
+
+h1 {
+	margin-top: 0;
 }
 
 #modal {
-	display: none;
-	border: solid 1px black;
-	width: 300px;
+	background-color: white;
+	max-width: 600px;
 	margin: 0 auto;
+	height: 200px;
+	padding: 20px;
+	position: relative;
+	top: 30%;
+	right: 0;
+	left: 0;
+	bottom: 0;
+}
+
+#close-modal,
+#open-modal {
+	background-color: royalblue;
+	color: whitesmoke;
+	cursor: pointer;
+	padding: 10px 15px;
+	border: none;
+	font-size: 20px;
 }
